Add choiceSupplier attribute to customize values (#21)
Co-authored-by: Scott Leberknight <174812+sleberknight@users.noreply.github.com>

Closes #22